fixed a bug with the maps layout on mobile

--- a/src/components/style/Banner.scss
+++ b/src/components/style/Banner.scss
@@ -5,6 +5,7 @@
   margin-bottom: 40px;
   display: flex;
   flex-direction: row;
+  justify-content:center;
   img {
     display: none;
   }
@@ -30,18 +31,21 @@
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
   .banner {
     justify-content: space-between;
     align-items: flex-end;
+    width: 100%;
     img {
       display: block;
+      width: 50%;
     }
     .text {
       align-self: center;
       margin-right: 100px;
+      padding: 0;
       h1 {
-        font-size: 60px;
+        font-size: 40px;
       }
       p {
         font-size: 20px;
