--- a/src/components/style/DataByCounty.scss
+++ b/src/components/style/DataByCounty.scss
@@ -13,7 +13,6 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
-
   margin-bottom: 20px;
   margin-right: auto;
   margin-left: auto;
@@ -24,54 +23,6 @@
     font-size: var(--component-title-mobile);
     font-family: var(--roboto);
     color: var(--primary-color);
-  }
-
-  .searchBar {
-    display: flex;
-    align-items: center;
-    line-height: 2em;
-
-    .description {
-      font-size: 12px;
-      line-height: 1.2em;
-      margin-top: 8px;
-    }
-
-    select {
-      // A reset of styles, including removing the default dropdown arrow
-      appearance: none;
-      // Additional resets for further consistency
-      background-color: transparent;
-      border: none;
-      padding: 0 1em 0 0;
-      margin: 0;
-      width: 100%;
-      font-family: inherit;
-      font-size: inherit;
-      cursor: inherit;
-      line-height: inherit;
-      outline: none;
-    }
-
-    .custom-select {
-      width: 100%;
-      min-width: 15ch;
-      max-width: 30ch;
-      border: 1px solid black;
-      border-radius: 0.25em;
-      padding: 0.25em 0.5em;
-      cursor: pointer;
-      line-height: 1.1;
-      background-color: #fff;
-      background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-      display: grid;
-      grid-template-areas: 'select';
-      align-items: center;
-    }
-  }
-
-  .select-wrapper {
-    width: 250px;
   }
 
   .dataRow {
@@ -122,6 +73,13 @@
   }
 
   .map {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    .react-transform-element {
+      display:flex;
+      justify-content:center;
+    }
     p {
       font-size: 14px;
       color: gray;
@@ -133,9 +91,7 @@
     .title {
       font-size: var(--component-title-desktop);
     }
-
     .map {
-      display: block;
       width: 50vw;
       min-width: 400px;
     }
