--- a/src/components/style/Navbar.scss
+++ b/src/components/style/Navbar.scss
@@ -49,7 +49,7 @@
       display: none;
     }
     .menu {
-      height: 120px;
+      height: 80px;
     }
     .logo{
       width: 75%;
